<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_inventories" />

    <TextView
        android:id="@+id/inventories_zero_lvl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/inventories_zero_lvl_title"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inventories_zero_lvl_prop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inventories_zero_lvl_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/inventories_zero_lvl_current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inventories_zero_lvl_prop_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/custom"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/inventories_zero_lvl_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/inventories_zero_lvl_current_date"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inventories_zero_lvl_save_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/enable_but_selector"
            android:drawableRight="@drawable/icon_save"
            android:minHeight="30dp"
            android:onClick="saveCurrentInventory"
            android:text="@string/inventories_third_lvl_save"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/custom_white"
            android:textSize="11sp" />

        <Button
            android:id="@+id/inventories_zero_lvl_view_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/enable_but_selector"
            android:drawableRight="@drawable/icon_view"
            android:layout_margin="5dp"
            android:onClick="viewCurrentInventory"
            android:text="@string/inv_zero_lvl_view_but"
            android:minHeight="30dp"
            android:textAllCaps="false"
            android:textColor="@color/custom_white" />

        <Button
            android:id="@+id/inventories_zero_lvl_email_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/enable_but_selector"
            android:drawableRight="@drawable/icon_email"
            android:minHeight="30dp"
            android:layout_margin="5dp"
            android:onClick="sendByEmailCurrentInventory"
            android:text="@string/inventories_email_but"
            android:textAllCaps="false"
            android:textColor="@color/custom_white" />

        <Button
            android:id="@+id/inventories_zero_lvl_delete_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_margin="5dp"
            android:background="@drawable/enable_but_selector"
            android:drawableRight="@drawable/icon_cross"
            android:minHeight="30dp"
            android:onClick="deleteCurrentInventory"
            android:text="@string/inventories_del_but"
            android:textAllCaps="false"
            android:textColor="@color/custom_white" />
    </LinearLayout>

    <ListView
        android:id="@+id/inventories_zero_lvl_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inventories_zero_lvl_top_layout"
        android:layout_marginTop="10dp"
        android:divider="@color/custom_white" />
</RelativeLayout>